# sur-protocol

./: .env.example  .gitignore  DEPLOY_GUIDE.md  IMPLEMENTATION_PLAN.md  README.md  setup.sh
agent-api/: .env.example  package.json
api/: .dockerignore  .env.example  Dockerfile  Dockerfile.disabled  README.md  package-lock.json  package.json
backtester/: .env.example  adaptive-brain.ts  engines.ts  gen-data.ts  indicators-pro.ts  indicators.ts  lab.ts  package.json  report.ts  run.ts  sim-executor.ts
contracts/: .gas-snapshot  deploy-testnet.sh  foundry.toml  update-addresses.sh
copytrade-bot/: .env.example  package.json
demo/: demo-trade.ts  package-lock.json  package.json
deploy/: DEPLOYMENT.md  deploy-all.sh  deploy.sh  railway-setup.sh  start-all.sh
docs/: ARCHITECTURE.md  AUDIT_PACKAGE.md  AUDIT_SCOPE.md  BUG_BOUNTY.md  CHAOS_TESTING_REPORT_2026-03-23.md  HARDENING_COMPLETE.md  INCIDENT_RESPONSE.md  INVESTOR_OVERVIEW.md  MAINNET_LAUNCH_CHECKLIST.md  MAPPING_2_triple_anchor_liquidations.md  MAPPING_3_MARGIN_TIERS_DESIGN.md  MAPPING_3_prospective_params.md  MAPPING_4_freshness_event_schema.md  PRIVACY_POLICY.md  README.md  RUNBOOKS.md  SECURITY_AUDIT_INTERNAL_2026-03-22.md  TERMS_OF_SERVICE.md  THREAT_MODEL.md  proof-of-context-mapping.md
engine/: Cargo.toml  README.md
engine/benches/: orderbook_bench.rs
engine/src/: main.rs  matching.rs  orderbook.rs  types.rs
funding-bot/: .env.example  Dockerfile  package-lock.json  package.json
intent-engine/: .env.example  package.json
keeper/: .env.example  Dockerfile  README.md  package-lock.json  (+1 more)
(+269 files in other folders)
